Add carousel support on root

--- a/app/views/application/root.html.erb
+++ b/app/views/application/root.html.erb
@@ -1,1 +1,8 @@
 <p>Hello from <%= request.host %>. It is <strong><%= Time.now %></strong>!</p>
+
+<div class="lazy">
+  <div><img data-lazy=<%= image_path "lazyfonz1.png" %> /></div>
+  <div><img data-lazy=<%= image_path "lazyfonz2.png" %> /></div>
+  <div><img data-lazy=<%= image_path "lazyfonz3.png" %> /></div>
+  <div><img data-lazy=<%= image_path "lazyfonz4.png" %> /></div>
+</div>
